# MarkdownRS

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  .rustfmt.toml  AGENTS.md  Architecture.md  BUG_FIXES_SUMMARY.md  CLAUDE.md  LICENSE  README.md  Review.md  claude.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  tsconfig.json  verify.js  vite.config.ts
.agents/: AGENTS.md
.claude/: CLAUDE.md
.github/workflows/: release.yml
.husky/: pre-commit
scripts/: bump.js  clean.js  package.js  version.js
src/: app.css  app.html  global.d.ts  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_commands.rs  main.rs  markdown_config.rs  markdown_formatter.rs  markdown_renderer.rs  state.rs  text_metrics.rs  text_transforms.rs  utils.rs
src-tauri/src/commands/: bookmarks.rs  data.rs  export.rs  files.rs  markdown.rs  mod.rs  session.rs  settings.rs  spellcheck.rs  updater.rs
src-tauri/src/db/: mod.rs
src-tauri/src/markdown/: config.rs  formatter.rs  mod.rs  renderer.rs
src-tauri/src/transforms/: mod.rs
src-tauri/templates/: default-dark.css  default-light.css
src/lib/actions/: sortable.svelte.ts  tooltip.ts
src/lib/commands/: paletteCommands.ts
src/lib/components/editor/: Editor.svelte  EditorView.svelte
src/lib/components/preview/: Preview.svelte
src/lib/components/ui/: AboutModal.svelte  BookmarksModal.svelte  (+31 more)
src/lib/config/: modalSizes.ts  textOperations.ts  textOperationsRegistry.ts
src/lib/services/: dictionaryService.ts  exportService.ts  fileMetadata.ts  fileWatcher.ts  sessionPersistence.ts  textProcessor.ts
src/lib/stores/: appState.svelte.ts  bookmarkStore.svelte.ts  dialogStore.svelte.ts  editorMetrics.svelte.ts  editorStore.svelte.ts  interfaceStore.svelte.ts  recentFilesStore.svelte.ts  state.svelte.ts  toastStore.svelte.ts  tooltipStore.svelte.ts
src/lib/types/: api.ts  markdown.ts
src/lib/utils/: async.ts  backend.ts  clientTransforms.ts  cmScroll.ts  colors.ts  commentToggle.ts  config.ts  contentHash.ts  date.ts  diagnostics.ts  dom.ts  editorCommands.ts  editorPlugins.ts  editorTheme.ts  errorHandling.ts  filePathExtension.ts  fileSystem.ts  fileValidation.ts  formatter.ts  formatterRust.ts  incrementalMarkdown.svelte.ts  lineChangeTracker.svelte.ts  logger.ts  markdown.ts  markdownExtensions.ts  markdownRust.ts  modalUtils.ts  recentChangesExtension.ts  registerShortcuts.ts  scrollManager.ts  scrollSync.svelte.ts  scrollSync.ts  searchManager.svelte.ts  settings.ts  shortcuts.ts  spellcheck.svelte.ts  spellcheck.ts  spellcheckExtension.svelte.ts  spellcheckExtension.ts  textMetrics.ts  (+5 more)
src/lib/workers/: scrollSync.worker.ts
src/routes/: +layout.svelte  +page.svelte
src/styles/: borders.css  colors.css  components.css  editor.css  effects.css  layout.css  preview.css  print.css  sizing.css  spacing.css  states.css  typography.css  ui.css  utilities.css  variables.css
(+18 files in other folders)
