[package]
name = "markdown-rs"
version = "0.1.85"
description = "The only markdown editor you need."
authors = ["dcog989"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.9", features = [] }
tauri-plugin-shell = "2.3"
tauri-plugin-fs = "2.4"
tauri-plugin-dialog = "2.4"
tauri-plugin-store = "2.4"
tauri-plugin-window-state = "2.4"
tauri-plugin-log = "2.7"
tauri-plugin-opener = "2.5"
tauri-plugin-single-instance = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.37", features = ["bundled"] }
log = "0.4"
chrono = "0.4"
anyhow = "1.0"
toml = "0.9"
trash = "5.2"
encoding_rs = "0.8"
