[package]
authors = ["dcog989"]
description = "The only markdown editor you need."
edition = "2024"
name = "markdown-rs"
version = "0.1.92"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
anyhow = "1.0"
chardetng = "0.1"
chrono = "0.4"
encoding_rs = "0.8"
log = "0.4"
markdown = "1.0"
rand = "0.9"
regex = "1.12"
reqwest = { version = "0.12", features = ["blocking"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
symspell_rs = "6.8"
tauri = { version = "2.9", features = [] }
tauri-plugin-dialog = "2.4"
tauri-plugin-fs = "2.4"
tauri-plugin-log = "2.7"
tauri-plugin-opener = "2.5"
tauri-plugin-shell = "2.3"
tauri-plugin-single-instance = "2.3"
tauri-plugin-store = "2.4"
tauri-plugin-updater = "2.9"
tauri-plugin-window-state = "2.4"
toml = "0.9"
trash = "5.2"
wincode = "0.2"
