[package]
authors = ["dcog989"]
description = "The only markdown editor you need."
edition = "2024"
name = "markdown-rs"
version = "0.1.136"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
anyhow = "1.0"
chardetng = "0.1"
chrono = "0.4"
comrak = "0.49"
dprint-plugin-markdown = "0.20"
encoding_rs = "0.8"
log = "0.4"
path-clean = "1.0"
r2d2 = "0.8"
r2d2_sqlite = "0.32"
regex = "1.12"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spellbook = "0.4"
tauri = { version = "2.9", features = [] }
tauri-plugin-clipboard-manager = "2.3"
tauri-plugin-dialog = "2.5"
tauri-plugin-fs = { version = "2.4", features = ["watch"] }
tauri-plugin-log = "2.8"
tauri-plugin-opener = "2.5"
tauri-plugin-shell = "2.3"
tauri-plugin-single-instance = "2.3"
tauri-plugin-store = "2.4"
tauri-plugin-updater = "2.9"
tauri-plugin-window-state = "2.4"
tokio = { version = "1", features = ["sync", "fs", "io-util"] }
toml = "0.9"
trash = "5.2"
unicode-bom = "2.0"
unicode-segmentation = "1.12"
velopack = "=0.0.1369-g1d5c984"
winreg = "0.55"
